--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "payfidoc",
+  "name": "my-website",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,7 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.7",
@@ -25,11 +24,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1"
-  },
-  "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.7",
-    "@tsconfig/docusaurus": "^1.0.4",
-    "typescript": "^4.3.5"
   },
   "browserslist": {
     "production": [
